# clmediakit

./: .gitignore  LICENSE  README.md  pyproject.toml
clmediakit/: __init__.py  cl_metadata.py  exif_tool_wrapper.py  hnsw_index_db.py  media_types.py
clmediakit/face_recognition/: scan_db_for_faces.py
clmediakit/face_recognition/db_access/: faces.py  image.py
clmediakit/random_media_generator/: base_media.py
test/: test_cl_metadata.py  test_random_media_generator.py
