[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # This tells setuptools to look for packages starting from the current directory
include = ["clmediakit*"] # This tells setuptools to include all packages that start with 'clmediakit'

[project]
name = "clmediakit"
version = "0.1.0"
description = "A simple media kit for metadata extraction and similarity search"
authors = [{ name = "Ananda Sarangaram", email = "asarangaram@gmail.com" }]
license-files = ["LICENSE" ]
dependencies = [
    "hnswlib==0.8.0",
    "imagedominantcolor @ git+https://github.com/asarangaram/imagedominantcolor.git@e188d51758513a4a8f6d740c133c2b4e44b4ce35",
    "ImageHash==4.3.2",
    "numpy==2.2.3",
    "opencv-python=4.12.0.88",
    "pillow==11.1.0",
    "PyWavelets==1.8.0",
    "scipy==1.15.2",
    "setuptools==76.0.0",
    "videohash @ git+https://github.com/asarangaram/videohash.git@44e6928d29388839871eb1e0ca39605eb253e245",
    "yt-dlp==2025.2.19",
]